# src/app/api/[transport]/route.ts
@@ -32,6 +32,8 @@ import { registerInsertPartnerTestResult } from "../../../tools/insertPartnerTes
 import { registerGetTournamentVenueWorklist } from "../../../tools/getTournamentVenueWorklist";
 import { registerGetRollForwardLog } from "../../../tools/getRollForwardLog";
 import { registerGetRollForwardCandidates } from "../../../tools/getRollForwardCandidates";
+import { registerGetRollForwardCandidatesV2 } from "../../../tools/getRollForwardCandidatesV2";
+import { registerGetTournamentRollForwardContext } from "../../../tools/getTournamentRollForwardContext";
 import { registerUpsertRollForwardLog } from "../../../tools/upsertRollForwardLog";
 import { registerListTools } from "../../../tools/listTools";
 import { registerGetSearchRuns } from "../../../tools/getSearchRuns";
@@ -122,6 +124,8 @@ const mcpHandler = createMcpHandler(
     registerGetTournamentVenueWorklist(server);
     registerGetRollForwardLog(server);
     registerGetRollForwardCandidates(server);
+    registerGetRollForwardCandidatesV2(server);
+    registerGetTournamentRollForwardContext(server);
     registerUpsertRollForwardLog(server);
 
     // Search-history reads: always registered (internal/operational data,
